--- a/rn-socket-chat/socket-chat/package.json
+++ b/rn-socket-chat/socket-chat/package.json
@@ -20,7 +20,11 @@
   },
   "dependencies": {
     "expo": "^25.0.0",
+    "express": "^4.16.2",
     "react": "16.2.0",
     "react-native": "0.52.0"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React Native App](https://github.com/react-community/create-react-native-app).",
+  "author": "",
+  "license": "ISC"
 }
